--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tss"
+name = "tss-tests"
 version = "0.1.0"
 authors = ["Changgyoo Park <changgyoo.park@sap.com>"]
 edition = "2018"
@@ -7,8 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossbeam-epoch = "^0.9.1"
-scc = "^0.3.22"
-
-[workspace]
-members = [".", "tests"]
