--- a/.github/workflows/tss.yml
+++ b/.github/workflows/tss.yml
@@ -20,6 +20,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: REUSE Compliance Check
+      uses: fsfe/reuse-action@v1.1
     - name: Build
       run: cargo build --verbose
     - name: Run tests
