--- a/.github/workflows/tss.yml
+++ b/.github/workflows/tss.yml
@@ -22,7 +22,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: REUSE Compliance Check
       uses: fsfe/reuse-action@v1.1
-    - name: Build
+    - name: Debug - Build
       run: cargo build --verbose
-    - name: Run tests
+    - name: Debug - Run unit tests
       run: cargo test --verbose
+    - name: Debug - Run tests
+      run: cargo test -p tss-tests
+    - name: Release - Build
+      run: cargo build --release --verbose
+    - name: Release - Run unit tests
+      run: cargo test --release --verbose
+    - name: Release - Run tests
+      run: cargo test --release -p tss-tests
+
