--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@
 name = "tss"
 version = "0.1.0"
 authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-scc = "^0.5.6"
+scc = "0.6"
