chore(*): update SCC to 0.7.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-scc = "0.6.9"
+scc = "^0.7"
