--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2021 Changgyoo Park <wvwwvwwv@me.com>
+# SPDX-FileCopyrightText: 2023 Changgyoo Park <wvwwvwwv@me.com>
 #
 # SPDX-License-Identifier: Apache-2.0
 
@@ -11,4 +11,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-scc = "^0.8"
+scc = "1.4"
