--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@
 
 [package]
 name = "tss"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
 edition = "2021"
 
@@ -12,3 +12,6 @@ edition = "2021"
 
 [dependencies]
 scc = "1.4"
+
+[dev-dependencies]
+tokio = { version = "1.2", features = ["full"] }
