--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [package]
-name = "tss"
+name = "sap-tsf"
 version = "0.2.0"
 authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
 edition = "2021"
