--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ name = "sap-tsf"
 version = "0.2.0"
 authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
 edition = "2021"
+readme = "README.md"
+repository = "https://github.com/SAP/transactional-storage-framework"
+license = "Apache-2.0"
+categories = ["asynchronous", "concurrency", "database-implementations"]
+keywords = ["async", "concurrent", "database"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
