--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ tokio = { version = "1.2", features = ["full"] }
 [[bench]]
 name = "access_controller"
 harness = false
+
+[[bench]]
+name = "atomic_counter"
+harness = false
