chore(ci): add windows-latest job

--- a/.github/workflows/sap_tsf.yml
+++ b/.github/workflows/sap_tsf.yml
@@ -14,7 +14,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  basic:
+  basic-unix:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
@@ -31,6 +31,15 @@ jobs:
       run: cargo test --release --verbose
     - name: Doc
       run: cargo doc --document-private-items
+  basic-windows:
+    runs-on: windows-latest
+    timeout-minutes: 15
+    steps:
+    - uses: actions/checkout@v3
+    - name: Debug
+      run: cargo test --verbose
+    - name: Release
+      run: cargo test --release --verbose
   benchmark:
     runs-on: ubuntu-latest
     timeout-minutes: 15
