feat(persistence_layer): creation/deletion methods

--- a/.github/workflows/sap_tsf.yml
+++ b/.github/workflows/sap_tsf.yml
@@ -31,6 +31,8 @@ jobs:
       run: cargo test --release --verbose
     - name: Doc
       run: cargo doc --document-private-items
+    - name: Spell-check
+      run: cargo spellcheck
   basic-windows:
     runs-on: windows-latest
     timeout-minutes: 15
