--- a/.config/spellcheck.toml
+++ b/.config/spellcheck.toml
@@ -5,5 +5,6 @@
 dev_comments = true
 
 [Hunspell]
-extra_dictionaries = ["/Users/i064499/transactional-storage-framework/.config/glossary.txt"]
+extra_dictionaries = [ "glossary.txt" ]
+search_dirs = [ "." ]
 use_builtin = true
