--- a/.github/workflows/sap_tsf.yml
+++ b/.github/workflows/sap_tsf.yml
@@ -21,10 +21,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Compliance
       uses: fsfe/reuse-action@v1.1
-    - name: Spell-check
-      uses: taiki-e/install-action@v2
+    - uses: taiki-e/install-action@v2
       with:
         tool: cargo-spellcheck
+    - name: Spell-check
       run: cargo spellcheck
     - name: Format
       run: cargo fmt --all
