--- a/.config/spellcheck.toml
+++ b/.config/spellcheck.toml
@@ -3,3 +3,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 dev_comments = true
+
+[Hunspell]
+extra_dictionaries = [ "glossary.txt" ]
+search_dirs = [ "." ]
+use_builtin = true
